we have something compiling

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,6 +1,9 @@
 set(LIB_H
     RemotePKCS11.h
-)
+    pkcs11/pkcs11.h
+    pkcs11/pkcs11t.h
+    pkcs11/pkcs11f.h
+        constants.h)
 
 set(LIB_SRC
     RemotePKCS11.c
