--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,17 +1,18 @@
 set(LIB_H
-    RemotePKCS11.h
-    pkcs11/pkcs11.h
-    pkcs11/pkcs11t.h
-    pkcs11/pkcs11f.h
-        constants.h)
+        RemotePKCS11.h
+        pkcs11/pkcs11.h
+        pkcs11/pkcs11t.h
+        pkcs11/pkcs11f.h
+        constants.h
+        keehive.h)
 
 set(LIB_SRC
-    RemotePKCS11.c
+        keehive.c
 )
 
-
+include_directories ("${PROJECT_BINARY_DIR}")
 
 add_library(keehive
-    ${LIB_H}
-    ${LIB_SRC}
+        ${LIB_H}
+        ${LIB_SRC}
 )
