more coding, cmake improvements

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set (keehive_VERSION_MINOR 1)
 
 set (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake)
 
-find_package (Quick-DER 1.2 REQUIRED)
+find_package (Quick-DER REQUIRED)
 find_package (cmocka REQUIRED)
 find_package (softhsm2 REQUIRED)
 
