--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,7 +2,8 @@
 include_directories (../lib)
 add_executable(keehive.test test_keehive.c)
 add_dependencies(keehive.test keehive.test)
-target_link_libraries(keehive.test keehive cmocka quickder)
+set(KEEHIVE_LINK_LIRARIES ${LIBCMOCKA_LIBRARIES} ${Quick-DER_LIBRARIES} ${LIBSOFTHSM2_LIBRARIES})
+target_link_libraries(keehive.test keehive ${KEEHIVE_LINK_LIRARIES})
 
 add_test(keehive.test keehive.test)
 
