--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,7 +2,15 @@
 include_directories (../lib)
 add_executable(keehive.test test_keehive.c)
 add_dependencies(keehive.test keehive.test)
-set(KEEHIVE_LINK_LIRARIES ${LIBCMOCKA_LIBRARIES} ${Quick-DER_LIBRARIES} ${LIBSOFTHSM2_LIBRARIES})
+
+set(KEEHIVE_LINK_LIRARIES
+        ${LIBCMOCKA_LIBRARIES}
+        ${Quick-DER_LIBRARIES}
+        ${LIBSOFTHSM2_LIBRARIES}
+        ${OPENSSL_LIBRARIES}
+        ${SQLITE3_LIBRARIES}
+)
+
 target_link_libraries(keehive.test keehive ${KEEHIVE_LINK_LIRARIES})
 
 add_test(keehive.test keehive.test)
