move softhsm to own submodule

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required (VERSION 3.7)
+cmake_minimum_required (VERSION 3.5)
 project (keehive C)
 set (keehive_VERSION_MAJOR 0)
 set (keehive_VERSION_MINOR 1)
@@ -8,9 +8,7 @@ set (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake)
 find_package (Quick-DER REQUIRED)
 find_package (cmocka REQUIRED)
 
-find_package (softhsm2 REQUIRED)
-find_package (OpenSSL REQUIRED)
-find_package (SQLite3 REQUIRED)
+
 
 configure_file (
         "lib/version.h.in"
@@ -22,6 +20,14 @@ include_directories ("${Quick-DER_INCLUDE_DIRS}")
 include_directories ("${LIBCMOCKA_INCLUDE_DIRS}")
 
 add_subdirectory (lib)
+
+
+if (build_wrap)
+    find_package (softhsm2 REQUIRED)
+    find_package (OpenSSL REQUIRED)
+    find_package (SQLite3 REQUIRED)
+    add_subdirectory (softhsm)
+endif()
 
 enable_testing()
 
