--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -4,7 +4,7 @@ set(LIB_H
         pkcs11/pkcs11t.h
         pkcs11/pkcs11f.h
         constants.h
-        keehive.h)
+        keehive.h pkcs11/pkcs11unix.h)
 
 set(LIB_SRC
         keehive.c
