--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,7 +1,10 @@
 
 include_directories (../lib)
+include_directories (../softhsm)
 add_executable(keehive.test test_keehive.c)
+add_executable(wrap.test test_softhsm.c)
 add_dependencies(keehive.test keehive.test)
+add_dependencies(wrap.test wrap.test)
 
 set(KEEHIVE_LINK_LIRARIES
         ${LIBCMOCKA_LIBRARIES}
@@ -9,10 +12,8 @@ set(KEEHIVE_LINK_LIRARIES
 )
 
 target_link_libraries(keehive.test keehive ${KEEHIVE_LINK_LIRARIES})
+target_link_libraries(wrap.test wrap ${KEEHIVE_LINK_LIRARIES})
 
 add_test(keehive.test keehive.test)
 
-add_test(keehive.test_valgrind valgrind
-        --error-exitcode=1 --read-var-info=yes
-        --leak-check=full --show-leak-kinds=all
-        ./keehive.test)
+add_test(wrap.test wrap.test)
