--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,8 +2,10 @@
 include_directories (../src)
 
 add_executable(keehive.test test_keehive.c)
+add_executable(client.test test_client.c)
 add_executable(wrap.test test_wrap.c)
 
+add_dependencies(client.test client.test)
 add_dependencies(keehive.test keehive.test)
 add_dependencies(wrap.test keehive.test)
 
@@ -12,9 +14,10 @@ set(KEEHIVE_LINK_LIRARIES
         ${Quick-DER_LIBRARIES}
 )
 
+target_link_libraries(client.test keehive ${KEEHIVE_LINK_LIRARIES})
 target_link_libraries(keehive.test keehive ${KEEHIVE_LINK_LIRARIES})
 target_link_libraries(wrap.test keehive ${KEEHIVE_LINK_LIRARIES})
 
 add_test(keehive.test keehive.test)
-
 add_test(wrap.test wrap.test)
+add_test(client.test client.test)
