make arg parsing smarter

--- a/automatic/CMakeLists.txt
+++ b/automatic/CMakeLists.txt
@@ -22,7 +22,7 @@ set(LIB_SRC
         generated/server.c
         convert.c
         util.c
-        returncodes.h)
+        returncodes.h manualpack.c manualpack.h)
 
 
 include_directories ("${PROJECT_BINARY_DIR}" "generated" ".")
