make shared lib pkcs11 compat

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required (VERSION 3.5)
-project (keehive C)
+project(keehive VERSION 0.1 LANGUAGES C DESCRIPTION "Remote PKCS#11 Client Library and Hosting Daemon")
+
 set (keehive_VERSION_MAJOR 0)
 set (keehive_VERSION_MINOR 1)
 
@@ -8,6 +9,8 @@ set (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake)
 find_package (Quick-DER REQUIRED)
 find_package (cmocka REQUIRED)
 find_package (softhsm2 REQUIRED)
+
+include(GNUInstallDirs)
 
 configure_file (
         "src/static/settings.h.in"
