--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,10 @@
+
 set(LIB_H
         generated/types.h
         generated/pack.h
         generated/unpack.h
         generated/call.h
-        generated/client.h
+        #generated/api.h
         generated/server.h
         generated/packer.h
         static/RemotePKCS11.h
@@ -17,13 +18,13 @@ set(LIB_H
         static/derput.h
         static/derget.h
         static/nedtrie.h
-        )
+    )
 
 set(LIB_SRC
         generated/pack.c
         generated/unpack.c
         generated/call.c
-        generated/client.c
+        generated/api.c
         generated/server.c
         static/convert.c
         generated/packer.c
@@ -33,33 +34,52 @@ set(LIB_SRC
 )
 
 
-include_directories ("${PROJECT_BINARY_DIR}" "generated" "." "static")
+include_directories (
+        "${PROJECT_BINARY_DIR}"
+        "generated" "."
+        "static"
+)
 
 add_library(keehive
+        SHARED
         ${LIB_H}
         ${LIB_SRC}
+
 )
+
+set(KEEHIVE_TEST_LINK_LIRARIES
+    ${LIBCMOCKA_LIBRARIES}
+)
+
+set(KEEHIVE_LINK_LIRARIES
+    ${Quick-DER_LIBRARIES}
+)
+
+
+target_link_libraries(keehive ${KEEHIVE_LINK_LIRARIES})
+
+set_target_properties(keehive PROPERTIES VERSION ${PROJECT_VERSION})
+set_target_properties(keehive PROPERTIES SOVERSION 0)
 
 enable_testing()
 
-add_executable(client.test generated/test/test_client.c)
+add_executable(api.test generated/test/test_api.c)
 add_executable(pack.test generated/test/test_pack.c)
 #add_executable(server.test generated/test/test_server.c)
 
-add_dependencies(client.test client.test)
+add_dependencies(api.test api.test)
 add_dependencies(pack.test pack.test)
 #add_dependencies(server.test server.test)
 
-
-set(KEEHIVE_TEST_LINK_LIRARIES
-        ${LIBCMOCKA_LIBRARIES}
-        ${Quick-DER_LIBRARIES}
-        )
-
-target_link_libraries(client.test keehive ${KEEHIVE_TEST_LINK_LIRARIES})
+target_link_libraries(api.test keehive ${KEEHIVE_TEST_LINK_LIRARIES})
 target_link_libraries(pack.test keehive ${KEEHIVE_TEST_LINK_LIRARIES})
 #target_link_libraries(server.test keehive ${KEEHIVE_TEST_LINK_LIRARIES})
 
-add_test(client.test client.test)
+add_test(api.test api.test)
 add_test(pack.test pack.test)
 #add_test(server.test server.test)
+
+
+
+
+install(TARGETS keehive LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
