add function list, cleanup

--- a/src/static/settings.h.in
+++ b/src/static/settings.h.in
@@ -1,3 +1,4 @@
 #define keehive_VERSION_MAJOR @keehive_VERSION_MAJOR@
 #define keehive_VERSION_MINOR @keehive_VERSION_MINOR@
 #define LIBSOFTHSM2_LIBRARY "@LIBSOFTHSM2_LIBRARY@"
+#define KEEHIVE_TEST_LIBRARY "@PROJECT_BINARY_DIR@/src/libkeehive.so"
