add softhwm test suite

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,16 +6,32 @@ set (keehive_VERSION_MINOR 1)
 
 set (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake)
 
-find_package (Quick-DER REQUIRED)
-find_package (cmocka REQUIRED)
-find_package (softhsm2 REQUIRED)
+set (CMAKE_CXX_STANDARD 11)
 
 include(GNUInstallDirs)
+
+find_package (Quick-DER REQUIRED)
+find_package (softhsm2 REQUIRED)
+
 
 configure_file (
         "src/static/settings.h.in"
         "${PROJECT_BINARY_DIR}/settings.h"
 )
+
+option(ENABLE_TESTING "build and run test suite" OFF)
+
+
+if(${ENABLE_TESTING})
+    find_package (cmocka REQUIRED)
+    find_package (cppunit REQUIRED)
+
+    enable_testing()
+
+    add_subdirectory (src/generated/test)
+    add_subdirectory (src/static/test)
+
+endif()
 
 include_directories ("${PROJECT_BINARY_DIR}")
 include_directories ("${Quick-DER_INCLUDE_DIRS}")
