--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -36,7 +36,8 @@ set(LIB_SRC
 
 include_directories (
         "${PROJECT_BINARY_DIR}"
-        "generated" "."
+        "generated"
+        "."
         "static"
 )
 
@@ -61,23 +62,5 @@ set_target_properties(keehive PROPERTIES SOVERSION 0)
 
 # make sure the file is .so, also on OSX. Yes, that is right, since this should be dlopened, not linked against
 set_target_properties(keehive PROPERTIES SUFFIX ".so")
-
-enable_testing()
-
-add_executable(api.test generated/test/test_api.c)
-add_dependencies(api.test api.test)
-target_link_libraries(api.test keehive ${KEEHIVE_TEST_LINK_LIRARIES})
-add_test(api.test api.test)
-
-
-add_executable(pack.test generated/test/test_pack.c)
-add_dependencies(pack.test pack.test)
-target_link_libraries(pack.test keehive ${KEEHIVE_TEST_LINK_LIRARIES})
-add_test(pack.test pack.test)
-
-
-add_executable(libload.test generated/test/test_libload.cpp)
-add_dependencies(libload.test libload.test keehive)
-add_test(libload.test libload.test)
 
 install(TARGETS keehive LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
