fix Ubuntu18.04 compilation

--- a/src/static/test/CMakeLists.txt
+++ b/src/static/test/CMakeLists.txt
@@ -13,4 +13,4 @@ add_executable(derputget.test ${TEST_C_FILES})
 
 target_link_libraries(derputget.test ${CPPUNIT_LIBRARIES})
 target_link_libraries(derputget.test keehive ${KEEHIVE_TEST_LINK_LIRARIES})
-
+add_test(derputget.test derputget.test)
